--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -1,37 +1,52 @@
-# https://jupyterbook.org/en/stable/publish/gh-pages.html
-
-name: Deploy to GitHub Pages
+name: Deploy Jupyter Book to GitHub Pages
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
-  deploy-book:
+  build:
     runs-on: ubuntu-latest
-    permissions:
-      pages: write
-      id-token: write
     steps:
-      - uses: actions/checkout@v5
+      - name: Check out
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v6
+        uses: actions/setup-python@v5
         with:
-          python-version: "3.14"
+          python-version: "3.11"
           cache: pip
-      - run: pip install -r requirements.txt
+
+      - name: Install Jupyter Book
+        run: |
+          python -m pip install -U pip
+          python -m pip install -U "jupyter-book>=1.0,<2.0"
 
       - name: Build the book
-        run: |
-          jupyter-book build .
+        run: jupyter-book build --all .
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v4
         with:
           path: _build/html
 
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
